# investment-agent

./: .gitignore  AGENTS.md  AI_INTEGRATION.md  CLAUDE.md  CONTRIBUTING.md  README.md  VNM_report.md  analysis_fox_2026-05-29.md  eslint.config.js  mcp.json  package-lock.json  package.json  report_DVP.md  report_tcb.md  tsconfig.base.json
docs/: README.md  architecture.md  (+5 more)
pipeline/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
pipeline/alembic/: env.py
pipeline/alembic/versions/: 001_initial_schema.py  002_scoring_portfolio.py  003_execution_monitoring.py
pipeline/grafana/: dashboard.json
pipeline/grafana/dashboards/: dashboard_stock.json
pipeline/pipeline/: config.py
pipeline/pipeline/ai/: news_sentiment.py  report_generator.py  signal_validator.py
pipeline/pipeline/clients/: dnse.py  fireant.py
pipeline/pipeline/db/: connection.py  models.py
pipeline/pipeline/execution/: approval.py  orders.py  otp.py
pipeline/pipeline/features/: fundamental.py  technical.py
pipeline/pipeline/ingestors/: company.py  financials.py  prices.py  tcbs_financial_reports.py
pipeline/pipeline/monitoring/: report.py  telegram.py
pipeline/pipeline/portfolio/: constructor.py  paper_trading.py  rebalancer.py  sizing.py
pipeline/pipeline/risk/: black_swan.py  drawdown.py  sector.py
pipeline/scripts/: bootstrap.sh
pipeline/tests/: conftest.py  test_constructor.py  test_engine.py  test_gates.py  test_macro.py  test_management.py  test_moat.py  test_quality.py  test_rebalancer.py  test_sizing.py  test_technical.py  test_value.py
(+203 files in other folders)
